--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter App</title>
+    <title>one click</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Counter App</h1>
-        <div>
-            <button id="Decrementbutton">Decrement By 1</button>
-            <span id="Displayvalue">0</span>
-            <button id="Incrementbutton">Increment By 1</button>
-        </div>
-        <button id="Resetbutton">Reset Value</button>
+    <div id="box">
+        <p class="clickme">Click Me </p>
     </div>
 </body>
 <script src="./script.js"></script>
