--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>one click</title>
+    <title>Mouse Out</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div id="box">
-        <p class="clickme">Click Me </p>
+        <p class="click me"> Don't click just put arrow</p>
     </div>
 </body>
 <script src="./script.js"></script>
