--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>one click</title>
+    <title>Key Press</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div id="box">
-        <p class="clickme">Click Me </p>
+    <div>
+        <h1 id="display"></h1>
+        <input type="text" id="input-box" placeholder="typesomething">
     </div>
 </body>
 <script src="./script.js"></script>
