--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>one click</title>
+    <title>Keydown-Keyup</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div id="box">
-        <p class="clickme">Click Me </p>
+    <div id="container">
+        <div id="display"> Press any key</div>
     </div>
 </body>
 <script src="./script.js"></script>
